--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-clipboard/clipboard": "^1.16.1",
     "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-firebase/app": "^21.6.1",
     "@react-native-firebase/auth": "^21.6.1",
@@ -17,6 +18,7 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.13",
     "@react-navigation/native-stack": "^7.1.14",
+    "axios": "^1.7.9",
     "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.76.3",
@@ -28,6 +30,7 @@
     "react-native-screens": "^4.3.0",
     "react-native-sound": "^0.11.2",
     "react-native-svg": "^15.11.1",
+    "react-native-tts": "^4.1.1",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
